<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_micuenta"
        android:title="@string/mi_cuenta"
        android:icon="@android:drawable/ic_dialog_info"/>
    <item
        android:id="@+id/item_crear"
        android:title="@string/crear_p"
        android:icon="@android:drawable/ic_input_add"/>
    <item
        android:id="@+id/item_buscar"
        android:title="@string/buscar_p"
        android:icon="@android:drawable/ic_menu_search"/>
    <item
        android:id="@+id/item_cerrar"
        android:title="@string/cerrar_sesion"
        android:icon="@android:drawable/presence_offline"/>
    <item
        android:id="@+id/item_salir"
        android:title="@string/salir_app"
        android:icon="@android:drawable/ic_lock_power_off"/>
</menu>