<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventanas.FragmentPerfiles"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/espacio_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/ingreseCorreo"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_validacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_blue"
        android:text="@string/validacion"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/p_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/perfil_nombreMascota"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_especie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enunciado_especieMascota"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enunciado_genero"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_raza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enunciado_razaMascota"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_tamanio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enunciado_tamañoMascota"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/enunciado_edadMascota"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/perfil_insertarFoto"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/p_caract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/perfil_caracteristicasEspecificas"
        android:textSize="22sp" />


</LinearLayout>