<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventanas.VentanaInformacion">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/Bienvenida"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/Informacion1"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/Informacion2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:contentDescription="@string/descripcion_perrito"
            app:srcCompat="@drawable/perrito_perdido" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/Informacion3"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_blue"
            android:gravity="center"
            android:onClick="Siguiente"
            android:padding="10dp"
            android:text="@string/botonSiguiente"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>