<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentanaCrearPerfil"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF9800"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/tituloPerfil"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="45dp"
                android:ems="10"
                android:hint="@string/perfil_nombreMascota"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/caract_especificas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:ems="10"
                android:hint="@string/perfil_caracteristicasEspecificas"
                android:inputType="textMultiLine"
                android:lines="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/enunciado_especieMascota"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/especie_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/enunciado_generoMascota"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/genero_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/enunciado_razaPerro"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/raza_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/enunciado_razaGato"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/raza_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/enunciado_tamañoMascota"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/tam_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/enunciado_edadMascota"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/edad_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp" />

            <Button
                android:id="@+id/inserta_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/rounded_blue"
                android:padding="10dp"
                android:text="@string/perfil_insertarFoto"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/imagen_predeterminada"/>

            <Button
                android:id="@+id/registra_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_blue"
                android:onClick="RegistrarPerfil"
                android:text="@string/registroPerfil"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>