<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventanas.VentanaCuenta"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/mi_cuenta"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/btn_verInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#34E73D"
            android:text="@string/verInfoCuenta"
            android:textColor="#FFF"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_verPerfiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#34E73D"
            android:text="@string/verPerfilesCreados"
            android:textColor="#FFF"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onClick"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/contenedorFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" >

    </FrameLayout>

</LinearLayout>